Update regulation.html view

--- a/regulation.html
+++ b/regulation.html
@@ -3,9 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=660, initial-scale=1.0">
     <title>島根大学ものづくり部 会則</title>
     <style>
+        body {
+            width: 650px;
+            margin: 10px;
+        }
+        
         p,
         pre,
         h1 {
