add mm-terms to index.html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
                     <th scope="row">Pim配布物サポートポリシー</th>
                     <td><a href="/distribute/support/draft1.html">草案 1</a></td>
                 </tr>
+                <tr>
+                    <th scope="row">Mattermostチャンネル命名規則</th>
+                    <td><a href="/mattermost/terms/20250421.html">草案 1</a></td>
+                </tr>
             </tbody>
         </table>
     </main>
