--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <td><a href="/distribute/support/draft1.html">草案 1</a></td>
                 </tr>
                 <tr>
-                    <th scope="row">Mattermostチャンネル命名規則</th>
+                    <th scope="row">Pimチャットシステム利用規約</th>
                     <td><a href="/mattermost/terms/20250421.html">草案 1</a></td>
                 </tr>
             </tbody>
