--- a/mattermost/emoji/draft1.html
+++ b/mattermost/emoji/draft1.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mattermost絵文字追加ガイドライン [草案]</title>
+    <title>Mattermost絵文字追加ガイドライン</title>
 </head>
 
 <body>
-    <h1>Mattermost絵文字追加ガイドライン [草案]</h1>
+    <h1>Mattermost絵文字追加ガイドライン</h1>
 
     <h2>文字 絵文字</h2>
     <pre>
