--- a/distribute/support/support20250605.html
+++ b/distribute/support/support20250605.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pim頒布物サポートポリシー [草案]</title>
+    <title>Pim頒布物サポートポリシー</title>
 </head>
 
 <body>
     <header>
-        <h1>Pim頒布物サポートポリシー [草案]</h1>
+        <h1>Pim頒布物サポートポリシー</h1>
     </header>
     <pre>
 Pim名義で提供する全てのアプリケーションは保証なしの現状のまま提供され、これらのアプリケーションを利用したことに起因するすべての責任については一切負いません。
