--- a/index.html
+++ b/index.html
@@ -50,20 +50,20 @@
                     <th scope="row">Mattermost絵文字追加ガイドライン</th>
                     <td>
                         <a href="/mattermost/emoji/draft1.html">草案 1</a><br >
-                        <a href="/mattermost/emoji/emoji20250605.html">20250605第１版</a>
+                        <a href="/mattermost/emoji/emoji20250605.html">2025年6月5日 第１版</a>
                     </td>
                 </tr>
                 <tr>
                     <th scope="row">Pim配布物サポートポリシー</th>
                     <td>
                         <a href="/distribute/support/draft1.html">草案 1</a><br>
-                        <a href="/distribute/support/support20250605.html">20250605第１版</a>
+                        <a href="/distribute/support/support20250605.html">2025年6月5日 第１版</a>
                     </td>
                 </tr>
                 <tr>
                     <th scope="row">Pimチャットシステム利用規約</th>
                     <td>
-                        <a href="/mattermost/terms/20250421.html">20250421第１版</a>
+                        <a href="/mattermost/terms/20250421.html">2025年4月21日 第１版</a>
                     </td>
                 </tr>
             </tbody>
